@@ -58,6 +58,7 @@
 38. Download podcasts sequentially.
 39. Configurable limit to auto podcast downloading.
 40. When starting, remove any previous partial podcast downloads.
+41. Don't make media keys backend configurable, auto detect the best one.
 
 1.4.2
 -----
